2007-08-08  Martin Nordholts  <martinn@svn.gnome.org>

	* libgimpwidgets/gimpratioentry.[ch]: Migrate entry completion
	code and put responsability on clients to set that up when needed.

	* app/tools/gimprectangleoptions.[ch]: Setup entry completion code
	manually for the GimpRatioEntry widgets by using
	(gimp_rectangle_options_setup_ratio_completion)
	(gimp_ratio_entry_history_select, gimp_ratio_entry_history_add):
	these new functions.

2007-08-08  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c
	* plug-ins/common/lcms.c: corrected memory handling.
	cmsOpenProfileFromMem() actually copies the data.

	* libgimpwidgets/gimpcolordisplay.c
	* libgimpwidgets/gimpcolordisplaystack.c: disconnect in dispose().

2007-08-08  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-save.c (save_dialog): added missing call to
	destroy_preview(). Fixes bug #464457.

	* plug-ins/jpeg/jpeg-load.c
	* plug-ins/jpeg/jpeg-save.c
	* plug-ins/jpeg/jpeg.[ch]: renamed global variables used for the
	preview hack.

2007-08-08  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: added buttons to unset the
	color profiles.

	* app/widgets/gimppropwidgets.c
	* libgimpwidgets/gimppropwidgets.c: minor cleanup.

2007-08-08  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/Makefile.am

	* app/paint-funcs/sample-funcs.[ch]: renamed to 
	* app/paint-funcs/subsample-region.[ch]

	* app/paint-funcs/scale-funcs.[ch]: renamed to 
	* app/paint-funcs/scale-region.[ch]

	* app/paint-funcs/reduce-region.[ch]: new files based on a patch
	from Geert Jordaens (bug #464466).

	* app/base/tile-manager-preview.c
	* app/core/gimp-transform-region.c
	* app/core/gimpbrush-scale.c
	* app/core/gimpdrawable-preview.c
	* app/core/gimpdrawable.c: changed accordingly.

2007-08-08  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleoptions.c
	(gimp_rectangle_options_iface_base_init): Serialize Fixed:
	Width/Height/Size to config.

2007-08-08  Sven Neumann  <sven@gimp.org>
